--- a/BookListRazor.csproj
+++ b/BookListRazor.csproj
@@ -5,5 +5,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.2"/>
     <PackageReference Include="MongoDB.Driver" Version="2.10.2"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2"/>
   </ItemGroup>
 </Project>
